crates/tests/src/snapshots/fe_compiler_tests__compile_errors__duplicate_typedef_in_module.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: a type definition with the same name already exists
  ┌─ compile_errors/duplicate_typedef_in_module.fe:4:1
  │
4 │ type bar = u8
  │ ^^^^^^^^^^^^^ Conflicting definition of `bar`
  │
  = Note: Give one of the `bar` definitions a different name


